# ROS2_RPI5_Radar

./: README.md  REQUIREMENTS.txt
doc/: EsquemaGeneral.drawio
src/ROS2_pc/rpi5_radar_action_interface/: CMakeLists.txt  package.xml
src/ROS2_pc/rpi5_radar_action_interface/action/: Rpi5radar.action
src/ROS2_pc/rpi5_radar_visual/: CMakeLists.txt  package.xml
src/ROS2_pc/rpi5_radar_visual/launch/: ros2_rpi5_radar_client.yaml
src/ROS2_pc/rpi5_radar_visual/src/: rpi5_radar_action_client.cpp
src/ROS2_pc/script/: launch_multiple_scans.sh
src/ROS2_rpi5/container/: Dockerfile  docker-compose.yaml
src/ROS2_rpi5/container/workspaces/: Place_for_ws.txt
src/ROS2_rpi5/rpi5_radar/: CMakeLists.txt  package.xml
src/ROS2_rpi5/rpi5_radar/launch/: ros2_rpi5_radar_server.yaml
src/ROS2_rpi5/rpi5_radar/src/: rpi5_radar_action_server.cpp
src/ROS2_rpi5/rpi5_radar_action_interface/action/: Rpi5radar.action
test/ROS2_test/rpi5_ultrasonic_test/: CMakeLists.txt  package.xml
test/ROS2_test/rpi5_ultrasonic_test/src/: rpi5_ultrasonic_pub.cpp
test/RPI5_test/led_buttom_test/: led_button_test.cpp
test/RPI5_test/servo_test/: servo_test.cpp
test/RPI5_test/ultrasonic_test/: ultrasonic_test.cpp
