cmake_minimum_required(VERSION 3.8)
project(rpi5_radar)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED) #to compile actions

# generate interface for created action
rosidl_generate_interfaces(${PROJECT_NAME}
  "action/Rpi5radar.action"
)



ament_package()
